# zed-http

./: Cargo.toml  README.md  extension.toml  shell.nix
.zed/: settings.json
docs/: configuration.md  development.md  index.md  installation.md
http-lsp/: Cargo.toml  build.rs
http-lsp/src/: code_actions.rs  code_lens.rs  commands.rs  document.rs  hover.rs  http_client.rs  inlay_hints.rs  main.rs  parser.rs
http-lsp/tree-sitter-http/: README.md
languages/http/: config.toml  highlights.scm  injections.scm  outline.scm  runnables.scm
src/: http.rs
test/: test.http
