[package]
name = "http-lsp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[[bin]]
name = "http-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.24"
streaming-iterator = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
url = "2"

[build-dependencies]
cc = "1"
